Fix master layout aligning the ad bar wrong

--- a/client/stylesheets/finance_layout.less
+++ b/client/stylesheets/finance_layout.less
@@ -17,7 +17,7 @@
     height:100%;
   }
   &_center {
-    //padding: 5px;
+    padding: 5px;
     margin: 0 auto;
     text-align: center;
     width: 680px;
@@ -27,9 +27,10 @@
   &_faq {
     // height:auto;
     width: 360px;
-    position: absolute;
-    top: 0;
-    bottom: 0;
+    height: 100%;
+    // position: absolute;
+    // top: 0;
+    // bottom: 0;
     padding: 15px 5px;
   }
 }
